code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_7.wast
(assert_malformed
  (module quote
    "(table 0 funcref)"
    "(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))"
  )
  "unexpected token"
)